; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_getset.c_array_data_get.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_getset.c_array_data_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PyExc_AttributeError = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [57 x i8] c"cannot get single-segment buffer for discontiguous array\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @array_data_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_data_get(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @PyArray_ISONESEGMENT(i32* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @PyExc_AttributeError, align 4
  %10 = call i32 @PyErr_SetString(i32 %9, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %27

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i64 @PyArray_NBYTES(i32* %12)
  store i64 %13, i64* %4, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i64 @PyArray_ISWRITEABLE(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %11
  %18 = load i32*, i32** %3, align 8
  %19 = load i64, i64* %4, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32* @PyBuffer_FromReadWriteObject(i32* %18, i32 0, i32 %20)
  store i32* %21, i32** %2, align 8
  br label %27

22:                                               ; preds = %11
  %23 = load i32*, i32** %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = trunc i64 %24 to i32
  %26 = call i32* @PyBuffer_FromObject(i32* %23, i32 0, i32 %25)
  store i32* %26, i32** %2, align 8
  br label %27

27:                                               ; preds = %22, %17, %8
  %28 = load i32*, i32** %2, align 8
  ret i32* %28
}

declare dso_local i32 @PyArray_ISONESEGMENT(i32*) #1

declare dso_local i32 @PyErr_SetString(i32, i8*) #1

declare dso_local i64 @PyArray_NBYTES(i32*) #1

declare dso_local i64 @PyArray_ISWRITEABLE(i32*) #1

declare dso_local i32* @PyBuffer_FromReadWriteObject(i32*, i32, i32) #1

declare dso_local i32* @PyBuffer_FromObject(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
